2010-05-29  Chong Yidong  <cyd@stupidchicken.com>

	* ansi-color.el: Delete unused escape sequences (Bug#6085).
	(ansi-color-drop-regexp): New constant.
	(ansi-color-apply, ansi-color-filter-region)
	(ansi-color-apply-on-region): Delete unrecognized control
	sequences.
	(ansi-color-apply): Build string list before calling concat.

2010-05-27  Chong Yidong  <cyd@stupidchicken.com>

	* progmodes/verilog-mode.el (verilog-type-font-keywords): Use
	font-lock-constant-face, not obsolete font-lock-reference-face.

2010-05-27  Masatake YAMATO  <yamato@redhat.com>

	* htmlfontify.el (hfy-face-resolve-face): New function.
	(hfy-face-to-style): Use it (Bug#6279).

2010-05-25  Stefan Monnier  <monnier@iro.umontreal.ca>

	* epa.el (epa--select-keys): Don't explicitly delete the window since
	that can fail (e.g. sole window in frame).  Use dedication instead.

2010-05-19  Uday S Reddy  <u.s.reddy@cs.bham.ac.uk>  (tiny change)

	* textmodes/fill.el (fill-region): Don't fill past the end (bug#6201).

2010-05-18  Stefan Monnier  <monnier@iro.umontreal.ca>

	* subr.el (read-quoted-char): Resolve modifiers after key
	remapping (bug#6212).

2010-05-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* tmm.el (tmm-prompt): Don't try to precompute bindings.
	(tmm-get-keymap): Compute shortcuts (bug#6171).

2010-05-10  Glenn Morris  <rgm@gnu.org>

	* desktop.el (desktop-save-buffer-p): Don't mistakenly include
	all dired buffers, even tramp ones.  (Bug#5755)  [Backport from trunk]

2010-05-07  Chong Yidong  <cyd@stupidchicken.com>

	* Version 23.2 released.

2010-05-03  Chong Yidong  <cyd@stupidchicken.com>

	* international/mule.el (auto-coding-alist):  Only purecopy
	car of each item, not the whole list (Bug#6083).

2010-05-02  Chong Yidong  <cyd@stupidchicken.com>

	* progmodes/js.el (js-mode): Make paragraph variables local before
	calling c-setup-paragraph-variables (Bug#6071).

2010-05-01  Eli Zaretskii  <eliz@gnu.org>
